--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -1,14 +1,17 @@
 <div class="gf-form-group">
   <div class="gf-form">
     <span class="gf-form-label width-10">Kind</span>
-    <input type="text" class="gf-form-input max-width-8" ng-model='ctrl.annotation.kind'/>
+    <div class="gf-form-select-wrapper width-12">
+      <select class="gf-form-input" ng-model="ctrl.annotation.kind" ng-options="f.value as f.text for f in ctrl.kinds">
+      </select>
+    </div>
   </div>
   <div class="gf-form">
     <span class="gf-form-label width-10">Experiment Namespace</span>
-    <input type="text" class="gf-form-input max-width-12" ng-model='ctrl.annotation.namespace'/>
+    <input type="text" class="gf-form-input max-width-12" placeholder="chaos-testing" ng-model='ctrl.annotation.namespace'/>
   </div>
   <div class="gf-form">
-    <span class="gf-form-label width-10">Experiment</span>
+    <span class="gf-form-label width-10">Experiment Name</span>
     <input type="text" class="gf-form-input max-width-12" ng-model='ctrl.annotation.experiment'/>
   </div>
 </div>
