--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -8,7 +8,13 @@
   </div>
   <div class="gf-form">
     <span class="gf-form-label width-10">Experiment Namespace</span>
-    <input type="text" class="gf-form-input max-width-12" placeholder="chaos-testing" ng-model='ctrl.annotation.namespace'/>
+    <div class="gf-form-select-wrapper width-12">
+      <select
+        class="gf-form-input service-dropdown"
+        ng-model="ctrl.namespace"
+        ng-options="f.value as f.text for f in ctrl.namespaces"
+      ></select>
+    </div>
   </div>
   <div class="gf-form">
     <span class="gf-form-label width-10">Experiment Name</span>
