support filtering parameters for chaos events
Signed-off-by: Ben Ye <yb532204897@gmail.com>

--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -11,7 +11,7 @@
     <div class="gf-form-select-wrapper width-12">
       <select
         class="gf-form-input service-dropdown"
-        ng-model="ctrl.namespace"
+        ng-model="ctrl.annotation.namespace"
         ng-options="f.value as f.text for f in ctrl.namespaces"
       ></select>
     </div>
