--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -1,23 +1,22 @@
 <div class="gf-form-group">
   <div class="gf-form">
-    <span class="gf-form-label width-10">Kind</span>
-    <div class="gf-form-select-wrapper width-12">
-      <select class="gf-form-input" ng-model="ctrl.annotation.kind" ng-options="f.value as f.text for f in ctrl.kinds">
-      </select>
-    </div>
+    <label class="gf-form-label width-10">Experiment</label>
+    <input type="text" class="gf-form-input max-width-12" ng-model="ctrl.annotation.experimentName" />
   </div>
+
   <div class="gf-form">
-    <span class="gf-form-label width-10">Experiment Namespace</span>
-    <div class="gf-form-select-wrapper width-12">
+    <label class="gf-form-label width-10">Namespace</label>
+    <input type="text" class="gf-form-input max-width-12" ng-model="ctrl.annotation.namespace" />
+  </div>
+
+  <div class="gf-form">
+    <label class="gf-form-label width-10">Kind</label>
+    <div class="gf-form-select-wrapper">
       <select
-        class="gf-form-input service-dropdown"
-        ng-model="ctrl.annotation.namespace"
-        ng-options="f.value as f.text for f in ctrl.namespaces"
+        class="gf-form-input width-12"
+        ng-model="ctrl.annotation.kind"
+        ng-options="f.value as f.label for f in ctrl.kindOptions"
       ></select>
     </div>
-  </div>
-  <div class="gf-form">
-    <span class="gf-form-label width-10">Experiment Name</span>
-    <input type="text" class="gf-form-input max-width-12" ng-model='ctrl.annotation.experiment'/>
   </div>
 </div>
