chore: update fetch method
Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -1,30 +1,30 @@
 <div class="gf-form-group">
   <div class="gf-form">
-    <label class="gf-form-label width-15">Object ID</label>
-    <input class="gf-form-input width-25" ng-model="ctrl.annotation.object_id" />
+    <label class="gf-form-label width-6">Object ID</label>
+    <input class="gf-form-input width-12" ng-model="ctrl.annotation.object_id" />
   </div>
 
   <div class="gf-form">
-    <label class="gf-form-label width-15">Namespace</label>
-    <input class="gf-form-input width-25" ng-model="ctrl.annotation.namespace" />
+    <label class="gf-form-label width-6">Namespace</label>
+    <input class="gf-form-input width-12" ng-model="ctrl.annotation.namespace" />
   </div>
 
   <div class="gf-form">
-    <label class="gf-form-label width-15">Name</label>
-    <input class="gf-form-input width-25" ng-model="ctrl.annotation.nname" />
+    <label class="gf-form-label width-6">Name</label>
+    <input class="gf-form-input width-12" ng-model="ctrl.annotation.eventName" />
   </div>
 
   <div class="gf-form">
-    <label class="gf-form-label width-15">Kind</label>
+    <label class="gf-form-label width-6">Kind</label>
     <select
-      class="gf-form-input width-25"
+      class="gf-form-input width-12"
       ng-model="ctrl.annotation.kind"
       ng-options="kind for kind in ctrl.kinds"
     ></select>
   </div>
 
   <div class="gf-form">
-    <label class="gf-form-label width-15">Limit</label>
-    <input type="number" class="gf-form-input width-25" ng-model="ctrl.annotation.limit" />
+    <label class="gf-form-label width-6">Limit</label>
+    <input class="gf-form-input width-12" type="number" ng-model="ctrl.annotation.limit" />
   </div>
 </div>
