fix: remove type number
Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -25,6 +25,6 @@
 
   <div class="gf-form">
     <label class="gf-form-label width-6">Limit</label>
-    <input class="gf-form-input width-12" type="number" ng-model="ctrl.annotation.limit" />
+    <input class="gf-form-input width-12" ng-model="ctrl.annotation.limit" />
   </div>
 </div>
