fix: reset kind field to input in annotations
This allows you to use variables in the kind field, such as $kind.

Signed-off-by: Yue Yang <g1enyy0ung@gmail.com>

--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -16,11 +16,7 @@
 
   <div class="gf-form">
     <label class="gf-form-label width-6">Kind</label>
-    <select
-      class="gf-form-input width-12"
-      ng-model="ctrl.annotation.kind"
-      ng-options="kind for kind in ctrl.kinds"
-    ></select>
+    <input class="gf-form-input width-12" ng-model="ctrl.annotation.kind" />
   </div>
 
   <div class="gf-form">
