--- a/src/partials/annotations.editor.html
+++ b/src/partials/annotations.editor.html
@@ -1,17 +1,26 @@
 <div class="gf-form-group">
   <div class="gf-form">
     <label class="gf-form-label width-6">Object ID</label>
-    <input class="gf-form-input width-12" ng-model="ctrl.annotation.object_id" />
+    <input
+      class="gf-form-input width-12"
+      ng-model="ctrl.annotation.object_id"
+    />
   </div>
 
   <div class="gf-form">
     <label class="gf-form-label width-6">Namespace</label>
-    <input class="gf-form-input width-12" ng-model="ctrl.annotation.namespace" />
+    <input
+      class="gf-form-input width-12"
+      ng-model="ctrl.annotation.namespace"
+    />
   </div>
 
   <div class="gf-form">
     <label class="gf-form-label width-6">Name</label>
-    <input class="gf-form-input width-12" ng-model="ctrl.annotation.eventName" />
+    <input
+      class="gf-form-input width-12"
+      ng-model="ctrl.annotation.eventName"
+    />
   </div>
 
   <div class="gf-form">
